# edge-detection-android

./: .editorconfig  .gitignore  ARCHITECTURE.md  BUILD_AND_RUN.md  FINAL_SUMMARY.md  LICENSE  NEXT_STEPS.md  OPENCV_SETUP.md  PROJECT_STATUS.md  PUSH_INSTRUCTIONS.md  README.md  SETUP.md  SUBMISSION_CHECKLIST.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/flam/edgedetection/: MainActivity.kt  NativeLib.kt
app/src/main/java/com/flam/edgedetection/gl/: GLRenderer.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: .keep
app/src/main/res/mipmap-xxxhdpi/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
docs/: BEFORE_AFTER_COMPARISON.md  EDGE_DETECTION_REFINEMENTS.md  IMPLEMENTATION_SUMMARY.md  QUICK_CONFIG_GUIDE.md  START_HERE.md
opencv/: build.gradle
opencv/src/main/: AndroidManifest.xml
screenshots/: README.md
web/: README.md  TEST_REPORT.md  index.html  package-lock.json  package.json  styles.css
web/src/: index.ts
